; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/st/cw1200/extr_queue.c_cw1200_queue_gc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/st/cw1200/extr_queue.c_cw1200_queue_gc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cw1200_queue = type { i32, i32 }
%struct.timer_list = type { i32 }

@list = common dso_local global i32 0, align 4
@gc = common dso_local global i32 0, align 4
@queue = common dso_local global %struct.cw1200_queue* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.timer_list*)* @cw1200_queue_gc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cw1200_queue_gc(%struct.timer_list* %0) #0 {
  %2 = alloca %struct.timer_list*, align 8
  %3 = alloca %struct.cw1200_queue*, align 8
  store %struct.timer_list* %0, %struct.timer_list** %2, align 8
  %4 = load i32, i32* @list, align 4
  %5 = call i32 @LIST_HEAD(i32 %4)
  %6 = load %struct.cw1200_queue*, %struct.cw1200_queue** %3, align 8
  %7 = ptrtoint %struct.cw1200_queue* %6 to i32
  %8 = load %struct.timer_list*, %struct.timer_list** %2, align 8
  %9 = load i32, i32* @gc, align 4
  %10 = call %struct.cw1200_queue* @from_timer(i32 %7, %struct.timer_list* %8, i32 %9)
  store %struct.cw1200_queue* %10, %struct.cw1200_queue** %3, align 8
  %11 = load %struct.cw1200_queue*, %struct.cw1200_queue** %3, align 8
  %12 = getelementptr inbounds %struct.cw1200_queue, %struct.cw1200_queue* %11, i32 0, i32 1
  %13 = call i32 @spin_lock_bh(i32* %12)
  %14 = load %struct.cw1200_queue*, %struct.cw1200_queue** %3, align 8
  %15 = call i32 @__cw1200_queue_gc(%struct.cw1200_queue* %14, i32* @list, i32 1)
  %16 = load %struct.cw1200_queue*, %struct.cw1200_queue** %3, align 8
  %17 = getelementptr inbounds %struct.cw1200_queue, %struct.cw1200_queue* %16, i32 0, i32 1
  %18 = call i32 @spin_unlock_bh(i32* %17)
  %19 = load %struct.cw1200_queue*, %struct.cw1200_queue** %3, align 8
  %20 = getelementptr inbounds %struct.cw1200_queue, %struct.cw1200_queue* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @cw1200_queue_post_gc(i32 %21, i32* @list)
  ret void
}

declare dso_local i32 @LIST_HEAD(i32) #1

declare dso_local %struct.cw1200_queue* @from_timer(i32, %struct.timer_list*, i32) #1

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @__cw1200_queue_gc(%struct.cw1200_queue*, i32*, i32) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1

declare dso_local i32 @cw1200_queue_post_gc(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
